fix(sidebar-list-item): stop last message sometimes overflowing

--- a/components/views/navigation/sidebar/list/List.less
+++ b/components/views/navigation/sidebar/list/List.less
@@ -1,6 +1,7 @@
 .list {
   overflow-y: auto;
   padding-bottom: 16px;
+  flex-grow: 1;
 
   .empty-friends-wrapper {
     display: flex;
