--- a/components/views/navigation/sidebar/list/item/Item.less
+++ b/components/views/navigation/sidebar/list/item/Item.less
@@ -32,8 +32,10 @@
       justify-content: space-between;
       gap: 4px;
 
-      .no-event {
+      .subtitle {
+        flex-grow: 1;
         pointer-events: none;
+        &:extend(.ellipsis);
       }
 
       .timestamp {
